recommendedProjects: change endpoint, find projects by token