@@ -223,7 +223,7 @@ public class ProjectService {
         List<ProjectSubscribeEntity> listUsers = subscriptionRepository.findUserIdsByProjectId(projectId);
         List<ProjectSubscribeDto> usersId = listUsers.stream()
                 .map(projectMapper::toDtoSubscribe)
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("List subscribers {}", usersId);
         return usersId;
@@ -246,5 +246,10 @@ public class ProjectService {
         log.info("User {} has been unsubscribed from project with id {}", user.getUsername(), projectId);
         return new SubscribeResponseDto(translator.getLocaleMessage("project.unsubscribed",
                 user.getUsername(), projectId));
+    }
+
+    public Page<GetAllProjectsDto> getProjectByIds(List<String> projectIds, Pageable pageable) {
+        return projectRepository.findByProjectIds(projectIds, pageable)
+                .map(projectMapper::getAllToDto);
     }
 }
